--- a/templates/contact.html
+++ b/templates/contact.html
@@ -562,7 +562,7 @@ body.dark-mode .styled-email {
                         {% endif %}
                     </label>
                     <br><br>
-                    <input type="email" id="email" class="data-field email-field styled-email" placeholder="{% if language == 'english' %}Your Email{% elif language == 'hindi' %}आपका ईमेल{% elif language == 'mandarin' %}您的电子邮件{% endif %}">
+                    <input name="email" type="email" id="email" class="data-field email-field styled-email" placeholder="{% if language == 'english' %}Your Email{% elif language == 'hindi' %}आपका ईमेल{% elif language == 'mandarin' %}您的电子邮件{% endif %}">
 
                     <br><br>
 
